fix(item-display): fix overflow on mobile (#231)

--- a/apps/backoffice/src/app/ui/item-display/item-display.styles.scss
+++ b/apps/backoffice/src/app/ui/item-display/item-display.styles.scss
@@ -1,7 +1,12 @@
 :host {
     flex: 1;
     width: 50%;
+    @media screen and (max-width: 720px) {
+        height: 50%;
+    }
 }
+
+
 
 [item-display] {
     background-color: #fff;
